syntax = "proto3";

message Book {
  int64 isbn = 1;
  string title = 2;
  string author = 3;
}

message GetBookRequest {
  int64 isbn = 1;
}

message QueryBooksRequest {
  string author_prefix = 1;
}

message Empty {}
message AlmostEmpty {
  int32 int = 1;
}

message IntValue {
  int32 int = 1;
}

service BookService {
  rpc GetBook(GetBookRequest) returns (Book) {}
  rpc QueryBooks(QueryBooksRequest) returns (stream Book) {}
  rpc QueryBooksNoAck(QueryBooksRequest) returns (stream Book) {}
  rpc EmptyQuery(Empty) returns (Book) {}
  rpc EmptyResponse(Book) returns (Empty) {}
  rpc EmptyResponseStream(Book) returns (stream Empty) {}
  rpc AlmostEmptyResponseStream(Book) returns (stream AlmostEmpty) {}
  rpc InfiniteGenerator(Empty) returns (stream AlmostEmpty) {}
  rpc FailFirstGenerator(Empty) returns (stream AlmostEmpty) {}
  rpc AddAllValues(stream IntValue) returns (IntValue) {}
  rpc MultipleBy2(stream IntValue) returns (stream IntValue) {}
}
